Record a checksum for pages compiled at runtime too
A page compiled at runtime recorded only a modification time, so the two
staleness mechanisms disagreed: precompiled pages compared content while
runtime-compiled ones compared timestamps and kept missing edits inside the
grails.gsp.reload.granularity window. In development that is the case that
matters most -- two saves in quick succession.

buildPageMetaInfo already materializes the whole source, so this costs nothing
beyond buffering the bytes before decoding rather than after. It must checksum
the stored bytes rather than gspSource or the decorated source, since the
runtime re-reads the resource raw when comparing.

The timestamp is still recorded, so nothing about the fallback path changes.